feat: add serde_styx and styx-format crates
- Create styx-format crate with shared formatting logic:
  - FormatOptions for serialization configuration
  - StyxWriter for low-level output generation
  - Scalar quoting utilities (can_be_bare, escape/unescape)

- Refactor facet-styx to use styx-format's StyxWriter

- Create serde_styx crate with full serde support:
  - Serializer and Deserializer implementations
  - from_str, to_string, to_string_compact APIs
  - 22 tests (17 unit + 5 doc)

- Add styx-compat-tests for cross-library verification:
  - Identical output tests
  - Cross-parsing tests (facet ↔ serde)
  - Round-trip tests

Total: 71 tests passing across all crates.

--- a/crates/facet-styx/Cargo.toml
+++ b/crates/facet-styx/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 facet-core = "0.42"
 facet-format = "0.42"
 facet-reflect = "0.42"
+styx-format = { path = "../styx-format" }
 styx-parse = { path = "../styx-parse" }
 
 [dev-dependencies]
