fix: update tracey prefixes and achieve 100% parser impl coverage
- Change tracey config prefixes from 'r' to 'parser', 'schema', 'diag'
- Update all annotations in styx-parse to use parser[impl ...] syntax
- Add missing annotations for entry.structure, entry.keypath, value.unit, entry.keypath.attributes
- Fix styx-tree tag payload handling (was TODO, now properly captures payloads)
- Add tests for tag payloads with objects and sequences

parser/rust now has 100% impl coverage (22/22 rules)

--- a/.config/tracey/config.yaml
+++ b/.config/tracey/config.yaml
@@ -1,6 +1,6 @@
 specs:
   - name: parser
-    prefix: r
+    prefix: parser
     include:
       - docs/content/spec/parser.md
     impls:
@@ -9,7 +9,7 @@ specs:
           - "**/*.rs"
 
   - name: schema
-    prefix: r
+    prefix: schema
     include:
       - docs/content/spec/schema.md
     impls:
@@ -18,7 +18,7 @@ specs:
           - "**/*.rs"
 
   - name: diagnostics
-    prefix: r
+    prefix: diag
     include:
       - docs/content/spec/diagnostics.md
     impls:
