feat(facet-styx): add tracing support
- Add tracing_macros.rs with trace! macro that compiles to nothing when disabled
- Add trace calls to parser for debugging event emission
- Use facet-testhelpers for test setup (enables tracing in tests)
- Add tracing feature that propagates to facet-format and facet-reflect

--- a/crates/facet-styx/Cargo.toml
+++ b/crates/facet-styx/Cargo.toml
@@ -10,5 +10,13 @@ facet-reflect = "0.42"
 styx-format = { path = "../styx-format" }
 styx-parse = { path = "../styx-parse" }
 
+# Tracing (optional - compiles to nothing when disabled)
+tracing = { version = "0.1", optional = true }
+
 [dev-dependencies]
 facet = "0.42"
+tracing = "0.1"
+facet-testhelpers = { path = "../../../facet/facet-testhelpers" }
+
+[features]
+tracing = ["dep:tracing", "facet-format/tracing", "facet-reflect/tracing"]
