feat: add styx-cli with tree/canonicalize/json commands
- Add styx-cli crate with facet-args for arg parsing
- 'styx tree' - print parsed tree structure
- 'styx canonicalize' - print canonical styx form
- 'styx json' - convert to JSON for debugging

Also add 007a-TODO-schema-extensions.md documenting:
- Constraint syntax (@string{minLen 1})
- Default wrapper (@default(value @type))
- Deprecated wrapper (@deprecated("reason" @type))
- Tree structure investigation (all patterns verified working)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/bearcove/styx"
 [workspace.dependencies]
 # Facet crates
 facet = "0.42"
+facet-args = "0.42"
 facet-core = "0.42"
 facet-format = "0.42"
 facet-reflect = "0.42"
@@ -30,7 +31,8 @@ styx-tree = { path = "crates/styx-tree" }
 facet-styx = { path = "crates/facet-styx" }
 
 [patch.crates-io]
-facet-format = { path = "../facet/facet-format" }
-facet-core = { path = "../facet/facet-core" }
-facet-reflect = { path = "../facet/facet-reflect" }
 facet = { path = "../facet/facet" }
+facet-args = { path = "../facet/facet-args" }
+facet-core = { path = "../facet/facet-core" }
+facet-format = { path = "../facet/facet-format" }
+facet-reflect = { path = "../facet/facet-reflect" }
