feat(styx-cli): file-first CLI design with @ subcommands
- File-first: `styx config.styx` formats to stdout
- Flags: --in-place, --json-out, --compact, -o
- Subcommands via @: `styx @tree config.styx`
- Safety: error when input == output file
- stdin/stdout: `-` for stdin, `-o -` for stdout

Stubbed but not yet implemented:
- --validate, --override-schema
- @diff, @lsp

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ insta = "1"
 styx-parse = { path = "crates/styx-parse" }
 styx-format = { path = "crates/styx-format" }
 styx-tree = { path = "crates/styx-tree" }
+styx-schema = { path = "crates/styx-schema" }
 facet-styx = { path = "crates/facet-styx" }
 
 [patch.crates-io]
