--- a/crates/styx-cli/Cargo.toml
+++ b/crates/styx-cli/Cargo.toml
@@ -10,6 +10,8 @@ path = "src/main.rs"
 [dependencies]
 styx-tree.workspace = true
 styx-parse.workspace = true
+styx-format.workspace = true
+styx-schema.workspace = true
 facet.workspace = true
 facet-args.workspace = true
 serde_json = "1"
