--- a/crates/styx-cli/Cargo.toml
+++ b/crates/styx-cli/Cargo.toml
@@ -12,6 +12,7 @@ styx-tree.workspace = true
 styx-parse.workspace = true
 styx-format.workspace = true
 styx-schema.workspace = true
+facet-styx.workspace = true
 facet.workspace = true
 facet-args.workspace = true
 serde_json = "1"
