feat(facet-styx): add ariadne rendering for deserializer errors
- Add RenderError trait for DeserializeError<StyxError>
- Add ariadne_config() that respects NO_COLOR env var
- Add snapshot tests for missing field, invalid scalar, unknown field errors
- Add nextest setup scripts to set NO_COLOR for consistent snapshots
- Keep Unicode box-drawing characters, only disable colors

--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -1,3 +1,23 @@
+# Nextest configuration for styx
+
+experimental = ["setup-scripts"]
+
+[scripts.setup.set-env-unix]
+command = 'scripts/setup-test-env.sh'
+
+[scripts.setup.set-env-windows]
+command = 'scripts/setup-test-env.cmd'
+
 [profile.default]
 slow-timeout = { period = "2s", terminate-after = 1 }
 fail-fast = true
+
+[[profile.default.scripts]]
+filter = 'all()'
+platform = { host = "cfg(unix)" }
+setup = 'set-env-unix'
+
+[[profile.default.scripts]]
+filter = 'all()'
+platform = { host = "cfg(windows)" }
+setup = 'set-env-windows'
