feat(styx-cli): add @lsp subcommand to start language server
Integrates styx-lsp into the CLI. Run 'styx @lsp' to start the
language server on stdio for editor integration.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ styx-parse = { path = "crates/styx-parse" }
 styx-format = { path = "crates/styx-format" }
 styx-tree = { path = "crates/styx-tree" }
 styx-schema = { path = "crates/styx-schema" }
+styx-cst = { path = "crates/styx-cst" }
+styx-lsp = { path = "crates/styx-lsp" }
 facet-styx = { path = "crates/facet-styx" }
 
 [patch.crates-io]
