feat(lsp): add schema validation and IDE features
- Add schema validation to LSP with ariadne error reporting
- Implement document links for clickable schema references
- Add go-to-definition for fields (jump to schema)
- Add hover information showing field types
- Add auto-completion with:
  - Field suggestions from schema
  - Filters out already-present fields
  - Typo suggestions via Levenshtein distance
  - Max 50 completions for large schemas
  - Required fields sorted before optional
- Add typo detection to validation errors ('did you mean?')
- Include valid fields list in unknown field errors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/bearcove/styx"
 
 [workspace.dependencies]
+# Error reporting
+ariadne = "0.4"
+
 # Facet crates
 facet = "0.42"
 facet-args = "0.42"
