--- a/crates/styx-schema/Cargo.toml
+++ b/crates/styx-schema/Cargo.toml
@@ -9,6 +9,7 @@ styx-tree.workspace = true
 styx-format.workspace = true
 facet-styx.workspace = true
 facet.workspace = true
+ariadne.workspace = true
 
 # Tracing (optional - compiles to nothing when disabled)
 tracing = { workspace = true, optional = true }
