--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,35 +5,73 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  merge_group:
 
 env:
   CARGO_TERM_COLOR: always
+  RUST_BACKTRACE: 1
 
 jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
+  fmt:
+    name: Rust / Format
+    runs-on: depot-ubuntu-24.04-4
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt
 
-      - name: Build
-        run: cargo build --all-targets
+      - name: Check formatting
+        run: cargo fmt --check
+
+  clippy:
+    name: Rust / Clippy
+    runs-on: depot-ubuntu-24.04-16
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: clippy
+
+      - name: Rust cache
+        uses: Swatinem/rust-cache@v2
+
+      - name: Clippy
+        run: cargo clippy --all-features --all-targets -- -D warnings
+
+  test:
+    name: Rust / Test
+    runs-on: depot-ubuntu-24.04-16
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install cargo-nextest
+        uses: taiki-e/install-action@nextest
+
+      - name: Rust cache
+        uses: Swatinem/rust-cache@v2
 
       - name: Run tests
-        run: cargo test --all-targets
-
-      - name: Run clippy
-        run: cargo clippy --all-targets -- -D warnings
+        run: cargo nextest run --all-targets
 
   compliance-rust:
-    runs-on: ubuntu-latest
+    name: Compliance / Rust
+    runs-on: depot-ubuntu-24.04-16
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Rust cache
+        uses: Swatinem/rust-cache@v2
 
       - name: Build styx CLI
         run: cargo build --release --bin styx
@@ -48,12 +86,13 @@ jobs:
         run: diff -u compliance/golden.sexp output.sexp
 
   compliance-js:
-    runs-on: ubuntu-latest
+    name: Compliance / JavaScript
+    runs-on: depot-ubuntu-24.04-4
     defaults:
       run:
         working-directory: bindings/styx-js
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
