docs: add scalar interpretation spec
New spec page defining how opaque scalars are interpreted as typed values:
- Strings, booleans (true/false only), integers (decimal/hex/octal/binary)
- Floats with inf/nan, durations (30s, 1h30m), ISO 8601 dates
- Bytes (hex encoding), null/unit, type coercion rules, error context

Also fix tracey config paths (docs/content/spec → docs/content/reference/spec).

--- a/.config/tracey/config.yaml
+++ b/.config/tracey/config.yaml
@@ -2,7 +2,16 @@ specs:
   - name: parser
     prefix: parser
     include:
-      - docs/content/spec/parser.md
+      - docs/content/reference/spec/parser.md
+    impls:
+      - name: rust
+        include:
+          - "**/*.rs"
+
+  - name: scalars
+    prefix: interp
+    include:
+      - docs/content/reference/spec/scalars.md
     impls:
       - name: rust
         include:
@@ -11,7 +20,7 @@ specs:
   - name: schema
     prefix: schema
     include:
-      - docs/content/spec/schema.md
+      - docs/content/reference/spec/schema.md
     impls:
       - name: rust
         include:
@@ -20,7 +29,7 @@ specs:
   - name: diagnostics
     prefix: diag
     include:
-      - docs/content/spec/diagnostics.md
+      - docs/content/reference/spec/diagnostics.md
     impls:
       - name: rust
         include:
