feat: add code folding support to Styx editor
- Add foldService for Styx that finds Object/Sequence nodes and returns fold ranges
- Fix grammar to allow leading newlines in Objects and Sequences (ObjContent, SeqContent)
- Add fold markers to lines with multi-line Objects and Sequences
- Remove built bundles from git tracking and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Cargo.lock
 .playwright-mcp/
 node_modules/
 pnpm-lock.yaml
+
+# Built JS bundles
+docs/static/playground/
+editors/codemirror-styx/dist/
