feat: add heredoc nested language support in CodeMirror
- Implement external tokenizer for heredocs to capture full content
- Add language injection support via parseMixed for heredoc content
- Support language hints (e.g., <<SQL,sql) to specify nested parser
- Update playground to use SQL highlighting in heredoc example
- Update golden compliance tests for bare-angle-brackets and heredoc
  parsing improvements
- Fix vim mode key handling with Prec.highest wrapper

--- a/docs/playground/package.json
+++ b/docs/playground/package.json
@@ -10,6 +10,7 @@
     "@bearcove/codemirror-lang-styx": "workspace:*",
     "@codemirror/autocomplete": "^6.18.0",
     "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-sql": "^6.10.0",
     "@codemirror/language": "^6.10.0",
     "@codemirror/state": "^6.5.4",
     "@codemirror/theme-one-dark": "^6.1.3",
