feat: add native Go parser implementation
- Pure Go lexer and parser matching Rust/JS behavior
- Zero dependencies, Go 1.22+
- CI jobs for go vet, staticcheck, and compliance tests
- All compliance tests pass

Also fixes edge cases in JS parser:
- Trailing > at end of line is consumed but not treated as attribute
- Heredoc << followed by non-uppercase is skipped
- Invalid tag continuation like @org/package properly errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,3 +163,50 @@ jobs:
 
       - name: Compare with golden
         run: diff -u ../../compliance/golden.sexp output.sexp
+
+  go-lint:
+    name: Go / Lint
+    runs-on: depot-ubuntu-24.04-4
+    defaults:
+      run:
+        working-directory: implementations/styx-go
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+          cache-dependency-path: implementations/styx-go/go.sum
+
+      - name: Run go vet
+        run: go vet ./...
+
+      - name: Run staticcheck
+        run: |
+          go install honnef.co/go/tools/cmd/staticcheck@latest
+          staticcheck ./...
+
+  compliance-go:
+    name: Compliance / Go
+    runs-on: depot-ubuntu-24.04-4
+    defaults:
+      run:
+        working-directory: implementations/styx-go
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+          cache-dependency-path: implementations/styx-go/go.sum
+
+      - name: Build compliance runner
+        run: go build ./cmd/styx-compliance
+
+      - name: Run compliance suite
+        run: ./styx-compliance ../../compliance/corpus > output.sexp
+
+      - name: Compare with golden
+        run: diff -u ../../compliance/golden.sexp output.sexp
