--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ node_modules/
 pnpm-lock.yaml
 
 # Built JS bundles
-docs/static/playground/
+docs/static/codemirror/
+docs/static/monaco/
 editors/codemirror-styx/dist/
