--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -255,7 +255,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Swift
-        uses: swift-actions/setup-swift@v3
+        uses: swift-actions/setup-swift@cc582c8cc5903db4beef8e6f57a0f8237073600a
         with:
           swift-version: '6.0'
 
@@ -275,7 +275,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Swift
-        uses: swift-actions/setup-swift@v3
+        uses: swift-actions/setup-swift@cc582c8cc5903db4beef8e6f57a0f8237073600a
         with:
           swift-version: '6.0'
 
