chore(vscode): rename to styx-lang for marketplace

--- a/editors/vscode-styx/package.json
+++ b/editors/vscode-styx/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "styx",
-  "displayName": "Styx",
+  "name": "styx-lang",
+  "displayName": "Styx Configuration Language",
   "description": "Styx configuration language support",
   "version": "1.0.0",
   "publisher": "bearcove",
