chore: separate extended compliance tests for Rust-only features
Move heredoc-dedent tests to corpus-extended since Python, Go, and
JavaScript implementations don't support this feature yet. Add extended
compliance check in CI that runs only for Rust.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,15 @@ jobs:
       - name: Compare with golden
         run: diff -u compliance/golden.sexp output.sexp
 
+      - name: Run extended compliance suite (Rust-only features)
+        run: |
+          find compliance/corpus-extended -name "*.styx" | sort | while read f; do
+            ./target/release/styx @tree --format sexp "$f"
+          done > output-extended.sexp
+
+      - name: Compare extended with golden
+        run: diff -u compliance/golden-extended.sexp output-extended.sexp
+
   compliance-js:
     name: Compliance / JavaScript
     runs-on: depot-ubuntu-24.04-4
