feat: add styx-embed crate for embedding schemas in binaries
Introduces styx-embed and styx-embed-macros for embedding Styx schemas
directly into compiled binaries. This enables zero-execution discovery
of schemas by tools like LSP and CLI.

Key features:
- embed_inline!() for embedding string literals
- embed_file!() and embed_files!() for embedding from files
- extract_schemas() for reading embedded schemas from binaries
- LZ4 compression and BLAKE3 hashing for integrity
- Named sections for easy extraction (__DATA,__styx_schemas on macOS)

Also adds schema_gen module to facet-styx for generating Styx schemas
from Facet types at build time, complementing the embed macros.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ styx-tree = { path = "crates/styx-tree" }
 styx-schema = { path = "crates/styx-schema" }
 styx-cst = { path = "crates/styx-cst" }
 styx-lsp = { path = "crates/styx-lsp" }
+styx-embed = { path = "crates/styx-embed" }
 facet-styx = { path = "crates/facet-styx" }
 
 # Optimize WASM builds for size
