feat: integrate @schema directive with CLI and LSP validation
- Fix skip_value() bug in facet-styx parser that consumed too many
  events when skipping nested structures like @schema directives
- Add @schema {source crate:..., cli <binary>} directive support
- CLI and LSP now extract embedded schemas from binaries via which + mmap
- Remove @dump-styx-schema fallback from docs (security concern)
- Zero-execution schema discovery: binaries are scanned, never run

--- a/crates/styx-lsp/Cargo.toml
+++ b/crates/styx-lsp/Cargo.toml
@@ -14,7 +14,11 @@ styx-cst = { path = "../styx-cst" }
 styx-tree = { path = "../styx-tree" }
 styx-schema = { path = "../styx-schema" }
 styx-format = { path = "../styx-format" }
+styx-embed = { path = "../styx-embed", features = ["mmap"] }
 facet-styx = { path = "../facet-styx" }
+
+# Binary lookup
+which = "7"
 
 # Error handling
 eyre = "0.6"
