--- a/crates/styx-cli/Cargo.toml
+++ b/crates/styx-cli/Cargo.toml
@@ -20,5 +20,6 @@ facet.workspace = true
 facet-args.workspace = true
 serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+which = "7"
 
 [dev-dependencies]
