feat(styx-embed): use goblin for direct section extraction
Parse ELF/Mach-O/PE headers to locate embedded schema sections directly
instead of scanning the entire binary. Falls back to magic byte scanning
for unknown formats. Also removes the optional mmap feature since it's
now always required for file extraction.

--- a/crates/styx-lsp/Cargo.toml
+++ b/crates/styx-lsp/Cargo.toml
@@ -14,7 +14,7 @@ styx-cst = { path = "../styx-cst" }
 styx-tree = { path = "../styx-tree" }
 styx-schema = { path = "../styx-schema" }
 styx-format = { path = "../styx-format" }
-styx-embed = { path = "../styx-embed", features = ["mmap"] }
+styx-embed = { path = "../styx-embed" }
 facet-styx = { path = "../facet-styx" }
 
 # Binary lookup
