--- a/crates/styx-cli/Cargo.toml
+++ b/crates/styx-cli/Cargo.toml
@@ -14,7 +14,7 @@ styx-cst.workspace = true
 styx-format.workspace = true
 styx-schema.workspace = true
 styx-lsp.workspace = true
-styx-embed = { workspace = true, features = ["mmap"] }
+styx-embed.workspace = true
 facet-styx.workspace = true
 facet.workspace = true
 facet-args.workspace = true
