fix(schema-gen): prevent stack overflow on recursive types
Add cycle detection to schema generation to handle types that reference
themselves (directly or indirectly). When a type is encountered that is
already being generated, emit a type reference instead of recursing.

This fixes the stack overflow when generating schemas for types containing
styx_schema::Schema, which has recursive structure through ObjectSchema.

Fixes #5

--- a/crates/facet-styx/Cargo.toml
+++ b/crates/facet-styx/Cargo.toml
@@ -19,6 +19,7 @@ facet.workspace = true
 tracing.workspace = true
 facet-testhelpers.workspace = true
 insta.workspace = true
+styx-schema = { path = "../styx-schema" }
 
 [features]
 tracing = ["dep:tracing", "facet-format/tracing", "facet-reflect/tracing"]
