--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -303,3 +303,33 @@ jobs:
       - name: Run C example
         working-directory: crates/styx-ffi/examples
         run: LD_LIBRARY_PATH=../../../target/release ./example
+
+  jetbrains-plugin:
+    name: JetBrains / Build Plugin
+    runs-on: depot-ubuntu-24.04-4
+    defaults:
+      run:
+        working-directory: editors/jetbrains-styx
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Generate Gradle wrapper
+        run: gradle wrapper --gradle-version=8.13
+
+      - name: Build plugin
+        run: ./gradlew buildPlugin
+
+      - name: Upload plugin artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: jetbrains-styx-plugin
+          path: editors/jetbrains-styx/build/distributions/*.zip
