jetbrains-styx: Add languageId and fileTypeMapping for LSP4IJ

--- a/editors/jetbrains-styx/src/main/resources/META-INF/plugin.xml
+++ b/editors/jetbrains-styx/src/main/resources/META-INF/plugin.xml
@@ -59,6 +59,7 @@
             Styx Language Server for configuration file support.
             ]]></description>
         </server>
-        <languageMapping language="Styx" serverId="styxLsp"/>
+        <languageMapping language="Styx" serverId="styxLsp" languageId="styx"/>
+        <fileTypeMapping fileType="Styx" serverId="styxLsp" languageId="styx"/>
     </extensions>
 </idea-plugin>
