feat(docs): add interactive quiz with typed parsing
- Add Quiz.svelte component with valid/invalid question format
- Add parseTyped function to styx-js for schema-aware parsing
- Add quiz-questions.styx with 19 questions covering Styx syntax
- Fix heredoc lang hint bug in both Rust and JS lexers (r[scalar.heredoc.lang])
- Fix trailing > parse error in JS parser
- Add styx-webmd crate for markdown rendering (WIP)

The quiz tests parser knowledge with immediate feedback.
Markdown rendering for explanations is work in progress.

--- a/docs/package.json
+++ b/docs/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@bearcove/codemirror-lang-styx": "workspace:*",
+    "@bearcove/styx": "workspace:*",
     "@codemirror/autocomplete": "^6.18.0",
     "@codemirror/lang-json": "^6.0.2",
     "@codemirror/lang-sql": "^6.10.0",
@@ -19,9 +20,11 @@
     "@lezer/highlight": "^1.2.0",
     "@lezer/lr": "^1.4.0",
     "@replit/codemirror-vim": "^6.3.0",
+    "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "codemirror": "^6.0.2",
     "monaco-editor": "^0.52.0",
-    "monaco-vim": "^0.4.1"
+    "monaco-vim": "^0.4.1",
+    "svelte": "^5.47.0"
   },
   "devDependencies": {
     "vite": "^7.3.1"
