feat(facet-styx): generate @default wrappers for fields with defaults
When a struct field has #[facet(default = expr)], the schema generator
now wraps the field type with @default(value @type), where value is the
actual default value (computed by calling the default function at schema
generation time).

Also removes the duplicate schema generator from styx-schema - facet-styx
is the canonical place for schema generation from Rust types.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ repository = "https://github.com/bearcove/styx"
 ariadne = "0.6"
 
 # Facet crates
-facet = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["reflect"] }
+facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
 facet-args = { git = "https://github.com/facet-rs/facet", branch = "main" }
 facet-core = { git = "https://github.com/facet-rs/facet", branch = "main" }
 facet-format = { git = "https://github.com/facet-rs/facet", branch = "main" }
