feat(facet-styx): merge styx-schema into facet-styx, add @tag serialization
- Move schema types, validation, error, and meta modules from styx-schema into facet-styx
- Delete styx-schema crate (no longer needed)
- Update styx-cli and styx-lsp to use facet_styx instead of styx_schema
- Implement write_variant_tag for Styx serializer to output @tag syntax
- Add skip_next_before_value to StyxWriter for proper tag+payload formatting
- Skip None payload after tags for idiomatic output (@string instead of @string@)
- Add expression mode for serialization/deserialization (from_str_expr, peek_to_string_expr)

Schema generation now outputs proper Styx syntax:
  schema {None @object{name @string, port @default(8080 @int)}}

--- a/crates/facet-styx/Cargo.toml
+++ b/crates/facet-styx/Cargo.toml
@@ -7,19 +7,20 @@ edition.workspace = true
 facet-core.workspace = true
 facet-format.workspace = true
 facet-reflect.workspace = true
+facet.workspace = true
 styx-format.workspace = true
 styx-parse.workspace = true
-ariadne = "0.6"
+styx-tree.workspace = true
+ariadne.workspace = true
+serde_json.workspace = true
 
 # Tracing (optional - compiles to nothing when disabled)
 tracing = { workspace = true, optional = true }
 
 [dev-dependencies]
-facet.workspace = true
 tracing.workspace = true
 facet-testhelpers.workspace = true
 insta.workspace = true
-styx-schema = { path = "../styx-schema" }
 
 [features]
 tracing = ["dep:tracing", "facet-format/tracing", "facet-reflect/tracing"]
