feat: set up cargo-dist for releases
Configures cargo-dist with:
- Targets: macOS (arm64, x86), Linux (arm64, x86), Windows (x86)
- Installers: shell script, PowerShell, Homebrew
- Homebrew tap: bearcove/homebrew-tap

Also fixes styx-lang.org URLs → styx.bearcove.eu

Closes #13

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,8 @@ facet-styx = { path = "crates/facet-styx" }
 # Optimize WASM builds for size
 [profile.release.package.styx-wasm]
 opt-level = "s"
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
