--- a/crates/styx-cli/Cargo.toml
+++ b/crates/styx-cli/Cargo.toml
@@ -2,6 +2,10 @@
 name = "styx-cli"
 version = "0.1.0"
 edition.workspace = true
+license.workspace = true
+repository.workspace = true
+description = "CLI for the Styx configuration language"
+homepage = "https://styx.bearcove.eu"
 
 [[bin]]
 name = "styx"
