--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,14 +17,14 @@ repository = "https://github.com/bearcove/styx"
 # Error reporting
 ariadne = "0.6"
 
-# Facet crates (using local path for development)
-facet = { path = "../facet/facet" }
-facet-args = { path = "../facet/facet-args" }
-facet-core = { path = "../facet/facet-core" }
-facet-format = { path = "../facet/facet-format" }
-facet-reflect = { path = "../facet/facet-reflect" }
-facet-testhelpers = { path = "../facet/facet-testhelpers" }
-facet-value = { path = "../facet/facet-value" }
+# Facet crates
+facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
+facet-args = { git = "https://github.com/facet-rs/facet", branch = "main" }
+facet-core = { git = "https://github.com/facet-rs/facet", branch = "main" }
+facet-format = { git = "https://github.com/facet-rs/facet", branch = "main" }
+facet-reflect = { git = "https://github.com/facet-rs/facet", branch = "main" }
+facet-testhelpers = { git = "https://github.com/facet-rs/facet", branch = "main" }
+facet-value = { git = "https://github.com/facet-rs/facet", branch = "main" }
 
 # Tracing
 tracing = "0.1"
@@ -54,15 +54,15 @@ opt-level = "s"
 inherits = "release"
 lto = "thin"
 
-# Patch to ensure all crates use the same facet version
-[patch."https://github.com/facet-rs/facet"]
-facet = { path = "../facet/facet" }
-facet-core = { path = "../facet/facet-core" }
-facet-reflect = { path = "../facet/facet-reflect" }
-facet-format = { path = "../facet/facet-format" }
-facet-path = { path = "../facet/facet-path" }
-facet-postcard = { path = "../facet/facet-postcard" }
-facet-pretty = { path = "../facet/facet-pretty" }
-facet-value = { path = "../facet/facet-value" }
-facet-dessert = { path = "../facet/facet-dessert" }
-facet-solver = { path = "../facet/facet-solver" }
+# # Patch to ensure all crates use the same facet version
+# [patch."https://github.com/facet-rs/facet"]
+# facet = { path = "../facet/facet" }
+# facet-core = { path = "../facet/facet-core" }
+# facet-reflect = { path = "../facet/facet-reflect" }
+# facet-format = { path = "../facet/facet-format" }
+# facet-path = { path = "../facet/facet-path" }
+# facet-postcard = { path = "../facet/facet-postcard" }
+# facet-pretty = { path = "../facet/facet-pretty" }
+# facet-value = { path = "../facet/facet-value" }
+# facet-dessert = { path = "../facet/facet-dessert" }
+# facet-solver = { path = "../facet/facet-solver" }
