feat(styx-lsp): persist allowed extensions in user config
Add a user configuration system for the Styx LSP that persists the
extension allowlist to ~/.config/styx/config.styx. This allows the
"Allow LSP extension" code action to persist across editor restarts.

- Add config module with StyxUserConfig struct and load/save functions
- Add build.rs to generate the schema for config.styx files
- Register styx-lsp schema hint for {userconfig}/styx/config.styx
- Add @tuple support to schema_to_type_str and generate_placeholder

--- a/crates/styx-lsp/Cargo.toml
+++ b/crates/styx-lsp/Cargo.toml
@@ -49,3 +49,7 @@ styx-lsp-test-schema = { path = "../styx-lsp-test-schema" }
 [dev-dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json.workspace = true
+
+[build-dependencies]
+facet.workspace = true
+facet-styx = { path = "../facet-styx" }
