--- a/crates/facet-styx/Cargo.toml
+++ b/crates/facet-styx/Cargo.toml
@@ -2,6 +2,9 @@
 name = "facet-styx"
 version = "1.0.0"
 edition.workspace = true
+description = "Facet integration for the Styx configuration language"
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 facet-core.workspace = true
