--- a/crates/styx-format/Cargo.toml
+++ b/crates/styx-format/Cargo.toml
@@ -4,6 +4,7 @@ version = "1.0.0"
 edition.workspace = true
 description = "Core formatting and parsing utilities for Styx"
 license.workspace = true
+repository.workspace = true
 
 [dependencies]
 styx-cst.workspace = true
