--- a/crates/styx-lsp/Cargo.toml
+++ b/crates/styx-lsp/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "styx-lsp"
 version = "1.0.0"
-edition = "2024"
-license = "MIT OR Apache-2.0"
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Language server for Styx configuration language"
 
 [dependencies]
