--- a/crates/styx-tree/Cargo.toml
+++ b/crates/styx-tree/Cargo.toml
@@ -2,6 +2,9 @@
 name = "styx-tree"
 version = "1.0.0"
 edition.workspace = true
+description = "High-level syntax tree for the Styx configuration language"
+license.workspace = true
+repository.workspace = true
 
 [features]
 default = []
