Set up captain, add READMEs etc.

--- a/crates/facet-styx/Cargo.toml
+++ b/crates/facet-styx/Cargo.toml
@@ -6,6 +6,11 @@ description = "Facet integration for the Styx configuration language"
 license.workspace = true
 repository.workspace = true
 
+[package.metadata]
+
+[package.metadata."docs.rs"]
+rustdoc-args = ["--html-in-header", "arborium-header.html"]
+
 [dependencies]
 facet-core.workspace = true
 facet-format.workspace = true
