--- a/crates/serde_styx/Cargo.toml
+++ b/crates/serde_styx/Cargo.toml
@@ -6,6 +6,11 @@ description = "Serde support for the Styx configuration language"
 license.workspace = true
 repository.workspace = true
 
+[package.metadata]
+
+[package.metadata."docs.rs"]
+rustdoc-args = ["--html-in-header", "arborium-header.html"]
+
 [dependencies]
 serde = "1.0"
 styx-format.workspace = true
