--- a/crates/styx-embed-macros/Cargo.toml
+++ b/crates/styx-embed-macros/Cargo.toml
@@ -6,6 +6,11 @@ description = "Proc macros for embedding Styx schemas in binaries"
 license.workspace = true
 repository.workspace = true
 
+[package.metadata]
+
+[package.metadata."docs.rs"]
+rustdoc-args = ["--html-in-header", "arborium-header.html"]
+
 [lib]
 proc-macro = true
 
