--- a/crates/styx-wasm/Cargo.toml
+++ b/crates/styx-wasm/Cargo.toml
@@ -6,6 +6,11 @@ license.workspace = true
 repository.workspace = true
 description = "WebAssembly bindings for Styx parser"
 
+[package.metadata]
+
+[package.metadata."docs.rs"]
+rustdoc-args = ["--html-in-header", "arborium-header.html"]
+
 [lib]
 crate-type = ["cdylib", "rlib"]
 
