--- a/crates/tree-sitter-styx/Cargo.toml
+++ b/crates/tree-sitter-styx/Cargo.toml
@@ -6,12 +6,17 @@ license = "MIT"
 readme = "README.md"
 keywords = ["incremental", "parsing", "tree-sitter", "styx"]
 categories = ["parsing", "text-editors"]
-repository = "https://github.com/tree-sitter/tree-sitter-styx"
-edition = "2021"
+repository = "https://github.com/bearcove/styx"
+edition = "2024"
 autoexamples = false
 
 build = "bindings/rust/build.rs"
 include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]
+
+[package.metadata]
+
+[package.metadata."docs.rs"]
+rustdoc-args = ["--html-in-header", "arborium-header.html"]
 
 [lib]
 path = "bindings/rust/lib.rs"
