Publish playgrounds separately to speed up docs

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,10 @@
 packages:
   - "docs"
   - "editors/codemirror-styx"
+  - "editors/monaco-styx"
   - "editors/vscode-styx"
   - "implementations/styx-js"
   - "tools/styx-webmd"
+  - "crates/styx-wasm"
+  - "playgrounds/monaco"
+  - "playgrounds/codemirror"
