--- a/editors/codemirror-styx/package.json
+++ b/editors/codemirror-styx/package.json
@@ -57,5 +57,8 @@
     "@lezer/common": "^1.0.0",
     "@lezer/highlight": "^1.0.0",
     "@lezer/lr": "^1.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
