facet-styx: Replace ProbeStream with save/restore (#40)
Update to the new FormatParser API that uses save()/restore() methods
instead of the ProbeStream GAT. Since StyxParser is Clone, we simply
clone the parser state on save() and restore it on restore().

Also migrate styx-cli from facet-args to figue.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,13 @@ ariadne = "0.6"
 
 # Facet crates
 facet = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
-facet-args = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
 facet-core = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
 facet-format = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
 facet-reflect = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
 facet-testhelpers = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
+
+# CLI parsing
+figue = { git = "https://github.com/bearcove/figue", branch = "main" }
 
 # Tracing
 tracing = "0.1"
