--- a/crates/styx-cli/Cargo.toml
+++ b/crates/styx-cli/Cargo.toml
@@ -26,7 +26,7 @@ styx-embed.workspace = true
 styx-gen-go.workspace = true
 facet-styx.workspace = true
 facet.workspace = true
-facet-args.workspace = true
+figue.workspace = true
 serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 which = "7"
