feat(facet-styx): Add StyxFormat for figue ConfigFormat integration
Add optional figue feature that provides StyxFormat, implementing
figue's ConfigFormat trait. This allows figue to parse .styx config
files alongside JSON and other formats.

Usage:
  use facet_styx::StyxFormat;
  builder::<Config>()
      .file(|f| f.formats(FormatRegistry::new().with(StyxFormat)))
      .build();

--- a/crates/facet-styx/Cargo.toml
+++ b/crates/facet-styx/Cargo.toml
@@ -25,12 +25,17 @@ serde_json.workspace = true
 # Tracing (optional - compiles to nothing when disabled)
 tracing = { workspace = true, optional = true }
 
+# Figue integration (optional)
+figue = { workspace = true, optional = true }
+
 [dev-dependencies]
 tracing.workspace = true
 facet-testhelpers.workspace = true
 insta.workspace = true
 facet-format = { workspace = true, features = ["tracing"] }
 facet-reflect = { workspace = true, features = ["tracing"] }
+figue.workspace = true
 
 [features]
 tracing = ["dep:tracing", "facet-format/tracing", "facet-reflect/tracing"]
+figue = ["dep:figue"]
