--- a/crates/styx-lsp/Cargo.toml
+++ b/crates/styx-lsp/Cargo.toml
@@ -54,6 +54,8 @@ styx-lsp-test-schema = { path = "../styx-lsp-test-schema", version = "1.0" }
 
 [dev-dependencies]
 serde_json.workspace = true
+futures = "0.3"
+tower = "0.4"
 
 [build-dependencies]
 facet.workspace = true
