refactor(styx-parse): Complete parser rewrite with cross-language compliance (#44)
## Summary

Complete rewrite of the styx-parse crate to use a cleaner architecture with a new styx-tokenizer crate. Additionally, all language implementations (Rust, Go, Python, JavaScript, Swift) are now aligned on a single compliance test suite.

## Major Changes

### New `styx-tokenizer` Crate
Extracted tokenization into a dedicated crate:
- `Tokenizer` produces raw `Token`s (structural tokens, scalars, comments, etc.)
- `TokenKind::Tag` for `@name` tokens (previously was `At` + `BareScalar`)
- Clean separation: tokenizer handles character-level lexing, parser handles semantics

### New `Lexer` (Higher-Level Tokenization)
Built on top of `Tokenizer`:
- Produces `Lexeme` variants: `Scalar`, `Tag`, `Unit`, `AttrKey`, `ObjectStart`, `SeqStart`, etc.
- Handles escape processing in quoted strings
- Extracts raw string content (without delimiters)
- Detects tag payloads via adjacency (`@tag{}` vs `@tag {}`)
- Produces `AttrKey` for attribute syntax (`name>value`)

### Rewritten `Parser`
Pull-based event parser (replaces the old callback-based parser):
- Uses iterator pattern: `parser.next_event()` returns `Option<Event>`
- Clean state machine with `Frame` enum for context tracking
- All validation preserved:
  - Duplicate key detection
  - Invalid escape sequences
  - Dotted path validation (ReopenedPath, NestIntoTerminal)
  - TooManyAtoms detection
  - Tag name validation
  - Missing whitespace before blocks

### Spec Change: Mixed Separators Allowed
- Removed `MixedSeparators` error - commas and newlines can now be freely mixed in objects
- Updated `docs/content/reference/spec/parser.md` section `r[object.separators]`
- Removed `Separator` tracking from `styx-tree::Object`

### TAG_TOKEN as Single Semantic Token
- `@name` is now a single `TAG_TOKEN` in the CST (not `AT` + `TAG_NAME`)
- Updated styx-lsp semantic tokens to emit tags as `Type` tokens
- Fixed `is_schema_declaration()` in s

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ proptest = "1"
 serde_json = "1"
 
 # Internal crates
+styx-tokenizer = { path = "crates/styx-tokenizer", version = "1.0" }
 styx-parse = { path = "crates/styx-parse", version = "1.0" }
 styx-format = { path = "crates/styx-format", version = "1.0" }
 styx-tree = { path = "crates/styx-tree", version = "1.0" }
