--- a/crates/styx-parse/Cargo.toml
+++ b/crates/styx-parse/Cargo.toml
@@ -13,12 +13,12 @@ rustdoc-args = ["--html-in-header", "arborium-header.html"]
 
 [features]
 default = []
-tracing = ["dep:tracing"]
-facet = ["dep:facet"]
+facet = ["dep:facet", "styx-tokenizer/facet"]
 
 [dependencies]
 facet = { workspace = true, optional = true }
-tracing = { workspace = true, optional = true }
+tracing = { workspace = true }
+styx-tokenizer = { workspace = true }
 
 [dev-dependencies]
 tracing.workspace = true
